[package]
name = "magma-gfx"
version = "0.1.0"
authors = ["louisgjohnson <louisgjohnson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.0"
vulkano = "0.18.0"
vulkano-win = "0.18.0"
vulkano-shaders = "0.18.0"
spin_sleep = "0.3.7"
image = "0.23.3"


[dependencies.nalgebra-glm]
version="0.7.0"